// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch should render 1`] = `
<DocumentFragment>
  <div
    class="flex items-center"
  >
    <span
      class="SwitchText-sc-1l99vi2-0 ftoQCZ"
      role="button"
    >
      Option A
    </span>
    <div
      class="mx-4"
    >
      <label
        class="flex"
      >
        <input
          class="Toggle__Input-qyyifx-0 WGuGL"
          type="checkbox"
        />
        <div
          class="Toggle__Handle-qyyifx-1 geejDn"
        >
          <span
            class="Toggle__HandleInner-qyyifx-2 eSIhju"
          />
        </div>
      </label>
    </div>
    <span
      class="SwitchText-sc-1l99vi2-0 hdbpY"
      role="button"
    >
      Option B
    </span>
  </div>
</DocumentFragment>
`;

exports[`Switch should render disabled 1`] = `
<DocumentFragment>
  <div
    class="flex items-center"
  >
    <span
      class="SwitchText-sc-1l99vi2-0 jfwmRN"
      disabled=""
      role="button"
    >
      Option A
    </span>
    <div
      class="mx-4"
    >
      <label
        class="flex"
      >
        <input
          class="Toggle__Input-qyyifx-0 WGuGL"
          type="checkbox"
        />
        <div
          class="Toggle__Handle-qyyifx-1 jztkAY"
          disabled=""
        >
          <span
            class="Toggle__HandleInner-qyyifx-2 iIyzPS"
            disabled=""
          />
        </div>
      </label>
    </div>
    <span
      class="SwitchText-sc-1l99vi2-0 gGDOkM"
      disabled=""
      role="button"
    >
      Option B
    </span>
  </div>
</DocumentFragment>
`;
